--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^8.9.2",
     "morgan": "^1.10.0",
     "react-router-dom": "^7.1.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
